--- a/spring-learn/build.gradle
+++ b/spring-learn/build.gradle
@@ -11,5 +11,6 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.18'
     compile(project(":spring-beans"))
+    compile(project(":spring-context"))
 //    annotationProcessor 'org.projectlombok:lombok'
 }
